--- a/package.json
+++ b/package.json
@@ -12,14 +12,19 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.12",
+    "@types/mongoose": "^5.11.96",
     "@types/mustache-express": "^1.2.1",
     "@types/node": "^15.12.5",
-    "@types/validator": "^13.1.4"
+    "@types/validator": "^13.1.4",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.3"
   },
   "dependencies": {
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "mongoose": "^8.13.2",
     "mustache-express": "^1.3.1",
+    "nodemon": "^3.1.9",
     "validator": "^13.6.0"
   }
 }
